# api-definition/src/main/resources/static/V1/openapi.yaml
@@ -14,7 +14,8 @@ tags:
   - name: Tasks
   - name: Groups
   - name: Users
-  - name: applicationConfigurations
+  - name: ApplicationConfigurations
+  - name: Files
 
 paths:
   /projects:
@@ -388,6 +389,7 @@ paths:
         default:
           $ref: '#/components/responses/ErrorResponse'
 
+
   /tasks/{taskIdentifier}/comments/{commentIdentifier}:
     delete:
       description: Deletes the comment logical
@@ -410,6 +412,39 @@ paths:
       responses:
         "200":
           description: Successfully logical delete.
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+    put:
+      description: Update a comment
+      tags:
+        - "Tasks"
+      operationId: updateComment
+      parameters:
+        - name: taskIdentifier
+          in: path
+          description: identifier of the Task
+          required: true
+          schema:
+            type: string
+        - name: commentIdentifier
+          in: path
+          description: identifier of the Comment
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Comment'
+      responses:
+        "200":
+          description: An updated comment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
         default:
           $ref: '#/components/responses/ErrorResponse'
 
@@ -885,7 +920,7 @@ paths:
     get:
       description: Returns the application configurations that are not for a specific Project.
       tags:
-        - applicationConfigurations
+        - ApplicationConfigurations
       operationId: getApplicationConfigurations
       responses:
         "200":
@@ -895,6 +930,64 @@ paths:
               schema:
                 items:
                   $ref: '#/components/schemas/ApplicationConfiguration'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+
+
+
+  /file:
+    post:
+      description: Uploads the content of the file in the servers file system
+      tags:
+        - Files
+      operationId: upload
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                createdBy:
+                  type: string
+                description:
+                  description: This is the description of the attachment
+                  type: string
+                fileContent:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: Returns the attachment
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Attachment'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+
+
+
+  /file/{identifier}:
+    get:
+      description: Returns the file content of the specific attachment.
+      tags:
+        - Files
+      operationId: getFileContent
+      parameters:
+        - name: identifier
+          in: path
+          description: identifier of the attachement
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: The file content of the specific attachment.
+          content:
+            text/plain; charset=utf-8:
+              schema:
+                type: string
+                format: binary
         default:
           $ref: '#/components/responses/ErrorResponse'
 
@@ -1128,10 +1221,20 @@ components:
           type: string
         createdBy:
           $ref: '#/components/schemas/User'
+        attachments:
+          description: These are the attachments of the comment
+          items:
+            $ref: '#/components/schemas/Attachment'
         createdAt:
           type: string
           pattern: '^([0-9]+)-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])[Tt]([01][0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9]|60)(\.[0-9]+)?(([Zz])|([\+|\-]([01][0-9]|2[0-3]):[0-5][0-9]))$'
           description: Creation date and time
+          example: "2021-01-30T08:30:00Z"
+          readOnly: true
+        updatedAt:
+          type: string
+          pattern: '^([0-9]+)-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])[Tt]([01][0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9]|60)(\.[0-9]+)?(([Zz])|([\+|\-]([01][0-9]|2[0-3]):[0-5][0-9]))$'
+          description: Update timestamp
           example: "2021-01-30T08:30:00Z"
           readOnly: true
 
@@ -1150,6 +1253,44 @@ components:
         assignDate:
           type: string
           pattern: '^([0-9]+)-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])[Tt]([01][0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9]|60)(\.[0-9]+)?(([Zz])|([\+|\-]([01][0-9]|2[0-3]):[0-5][0-9]))$'
+          example: "2021-01-30T08:30:00Z"
+          readOnly: true
+
+
+    AttachmentFormData:
+      format: binary
+      type: object
+      properties:
+        createdBy:
+          type: string
+        description:
+          description: This is the description of the attachment
+          type: string
+        fileContent:
+          type: string
+          format: binary
+
+    Attachment:
+      type: object
+      properties:
+        identifier:
+          type: string
+          format: uuid
+        name:
+          description: This is the name of the attachment
+          type: string
+        mimeType:
+          description: This is the mime type of the attachment
+          type: string
+        description:
+          description: This is the description of the attachment
+          type: string
+        createdBy:
+          $ref: '#/components/schemas/User'
+        uploadedAt:
+          type: string
+          pattern: '^([0-9]+)-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])[Tt]([01][0-9]|2[0-3]):([0-5][0-9]):([0-5][0-9]|60)(\.[0-9]+)?(([Zz])|([\+|\-]([01][0-9]|2[0-3]):[0-5][0-9]))$'
+          description: Creation date and time
           example: "2021-01-30T08:30:00Z"
           readOnly: true
 
