# task-ui/src/main/angular/src/app/shared/ModelsForUI.ts
@@ -1,3 +1,5 @@
+import { Attachment } from '../api';
+
 export interface Column {
     field: string; // This is the field name of the object. An example User: { name: 'test' } the field is the name
     header: string; // This is the translate key of the field.
@@ -13,4 +15,23 @@ export interface DropDown {
 export enum Type {
     ASSIGNS,
     SPECTATORS
+}
+
+export interface FileEvent {
+    commentIdentifier?: string;
+    createdBy: string
+    description?: string
+    fileContent: File
+}
+
+export class AttachmentsMimeType {
+    WORD: string[] = ['application/msword', 'application/vnd.openxmlformats-officedocument.wordprocessingml.document'];
+    IMAGE: string[] = ['image/png', 'image/jpeg'];
+    PDF: string[] = ['application/pdf'];
+    EXCEL: string[] = ['application/x-tika-ooxml', 'application/vnd.ms-excel', 'application/vnd.ms-excel']
+}
+
+export interface EditorModel {
+    text: string;
+    attachments: Attachment[];
 }
